[ADD] CPPI for FPP
[ADD] rp_dropmoneyondeath and rp_deathfee, drop money when you die. Off by default
[ADD] Demote option in F4
[ADD] People now walk slow while in ironsight mode of weapon
[ADD] DarkRP skin for the VGUI's
[ADD] Language system, it's really easy to add languages to your DarkRP now! Thanks WoRmS for the danish translation, Donkie for Swedish!
[ADD] Signature to the letters/mails
[FIX] Unable to remove door tool doors
[FIX] People with the admin privilege can now see the admin menu
[FIX] Hunger resetting after sleep
[FIX] Max microwaves
[FIX] rp_enforcemodels 0 not working correctly
[FIX] Unneccessary Database access on PlayerInitialSpawn(should save lag)
[FIX] Name exploit.
[FIX] People staying RP admin after having normal admin removed
[FIX] Errors when removing poopeemod
[FIX] Crash sometimes when changing team.
[FIX] Able to sprint after Arrest>sleep>wake up
[FIX] Tool restriction mods not working(Thanks Gorgorp!)
[FIX] Name exploit, names can now only contain letters and numbers.
[FIX] earthquake mod, it's been broken for a long time apparently
[FIX] Chat not appearing in HLSW
[FIX] Arrested timer resetting when other player was arrested
[FIX] Ooc and advert bug where you could say nothing in OOC or advert.
[FIX] Timers for database stuff
[CHANGE] Default shipments are now in addshipments.lua
[CHANGE] Moved complicated code in shared.lua and addshipments.lua to MakeThings.lua
[CHANGE] Changed filename of addshipments.lua to addentities.lua
[CHANGE] People now can't use wanted as an ESP, you will only see someone is wanted if he is in your sight. This way it won't be abused to find players.
[REMOVE] Simple Prop protection. You have served us well, goodbye.
[REMOVE] RunConsoleCommand override

DarkRP 2.3.7
Updated by: FPtje Falco

[ADD] /demote <reason> People need to specify a reason to demote
[ADD] rp_needwantedforarrest to prevent cops from random arresting