@@ -203,7 +203,7 @@ function FPP.AdminMenu(Panel)
 	addchk("Admins can physgun blocked entities", {"FPP_PHYSGUN", "admincanblocked"}, physgun)
 	addchk("Show icon in the middle of the screen", {"FPP_PHYSGUN", "shownocross"}, physgun)
 	addchk("Check constrained entities", {"FPP_PHYSGUN", "checkconstrained"}, physgun)
-	addchk("Prop surf/push/kill protection", {"FPP_PHYSGUN", "antinoob"}, physgun)
+	addchk("Prop kill protection", {"FPP_PHYSGUN", "antinoob"}, physgun)
 	addchk("Physgun reload protection enabled", {"FPP_PHYSGUN", "reloadprotection"}, physgun)
 	addchk("The blocked list is a white list", {"FPP_PHYSGUN", "iswhitelist"}, physgun)
 	addblock(physgun, "Physgun")
