@@ -11,6 +11,7 @@ DarkRP 2.3.7 SVN
 [ADD] DarkRP skin for the VGUI's
 [ADD] Language system, it's really easy to add languages to your DarkRP now! Thanks WoRmS for the danish translation, Donkie for Swedish!
 [ADD] Signature to the letters/mails
+[ADD] rp_startinghealth: Set the default health
 [FIX] Unable to remove door tool doors
 [FIX] People with the admin privilege can now see the admin menu
 [FIX] Hunger resetting after sleep
